[package]
name = "screen_keyboard"
version = "0.1.0"
edition = "2018"
authors = [ "SergioRibera" ]


[dependencies]
dirs = "3.0"
css-color-parser = "*"
lazy_static = "1.4.0"
fltk = { version = "^1.1", git = "https://github.com/fltk-rs/fltk-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
